Colab を使用して作成されました

--- a/nonparametric_analysis.ipynb
+++ b/nonparametric_analysis.ipynb
@@ -11,22 +11,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 5,
       "metadata": {
-        "id": "xoUQyMhJETMq",
-        "outputId": "b6e897ee-097c-43ff-a5e1-b4b197fa48cc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "xoUQyMhJETMq",
+        "outputId": "ec1eb888-7b1e-4004-927a-827cd72fb5d9"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Collecting japanize_matplotlib\n",
-            "  Using cached japanize-matplotlib-1.1.3.tar.gz (4.1 MB)\n",
-            "  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "Requirement already satisfied: japanize_matplotlib in /usr/local/lib/python3.11/dist-packages (1.1.3)\n",
             "Requirement already satisfied: matplotlib in /usr/local/lib/python3.11/dist-packages (from japanize_matplotlib) (3.10.0)\n",
             "Requirement already satisfied: contourpy>=1.0.1 in /usr/local/lib/python3.11/dist-packages (from matplotlib->japanize_matplotlib) (1.3.1)\n",
             "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.11/dist-packages (from matplotlib->japanize_matplotlib) (0.12.1)\n",
@@ -38,34 +36,57 @@
             "Requirement already satisfied: pyparsing>=2.3.1 in /usr/local/lib/python3.11/dist-packages (from matplotlib->japanize_matplotlib) (3.2.1)\n",
             "Requirement already satisfied: python-dateutil>=2.7 in /usr/local/lib/python3.11/dist-packages (from matplotlib->japanize_matplotlib) (2.8.2)\n",
             "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.11/dist-packages (from python-dateutil>=2.7->matplotlib->japanize_matplotlib) (1.17.0)\n",
-            "Building wheels for collected packages: japanize_matplotlib\n",
-            "  Building wheel for japanize_matplotlib (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for japanize_matplotlib: filename=japanize_matplotlib-1.1.3-py3-none-any.whl size=4120257 sha256=715532288721dddf8833722dcf54259cfa4779a968e3ad925b79ffb50e280f12\n",
-            "  Stored in directory: /root/.cache/pip/wheels/da/a1/71/b8faeb93276fed10edffcca20746f1ef6f8d9e071eee8425fc\n",
-            "Successfully built japanize_matplotlib\n",
-            "Installing collected packages: japanize_matplotlib\n",
-            "Successfully installed japanize_matplotlib-1.1.3\n",
             "Cloning into 'non-semipara'...\n",
-            "fatal: unable to access 'https://github.com:submergedcube/non-semipara.git/': URL using bad/illegal format or missing URL\n"
+            "remote: Enumerating objects: 21, done.\u001b[K\n",
+            "remote: Counting objects: 100% (21/21), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (16/16), done.\u001b[K\n",
+            "remote: Total 21 (delta 5), reused 13 (delta 3), pack-reused 0 (from 0)\u001b[K\n",
+            "Receiving objects: 100% (21/21), 829.25 KiB | 8.64 MiB/s, done.\n",
+            "Resolving deltas: 100% (5/5), done.\n"
           ]
         }
       ],
       "source": [
         "!pip install japanize_matplotlib\n",
-        "!git clone https://github.com:submergedcube/non-semipara.git"
+        "!git clone https://github.com/submergedcube/non-semipara.git"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
-        "id": "MNphBvXmETMr"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 388
+        },
+        "id": "MNphBvXmETMr",
+        "outputId": "13fdc2dc-2d1a-4930-8b53-0324a6356f7d"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "ModuleNotFoundError",
+          "evalue": "No module named 'modules'",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-6-745c6f08b16b>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m from modules.nonparametric_modules import (\n\u001b[0m\u001b[1;32m     13\u001b[0m     \u001b[0mTriangularKernel\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m     \u001b[0mRectangularKernel\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'modules'",
+            "",
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0;32m\nNOTE: If your import is failing due to a missing package, you can\nmanually install dependencies using either !pip or !apt.\n\nTo view examples of installing some common dependencies, click the\n\"Open Examples\" button below.\n\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n"
+          ],
+          "errorDetails": {
+            "actions": [
+              {
+                "action": "open_url",
+                "actionText": "Open Examples",
+                "url": "/notebooks/snippets/importing_libraries.ipynb"
+              }
+            ]
+          }
+        }
+      ],
       "source": [
-        "%reload_ext autoreload\n",
-        "%autoreload 2\n",
-        "\n",
         "import japanize_matplotlib\n",
         "import matplotlib.pyplot as plt\n",
         "import numpy as np\n",
